<resources>
    <string name="app_name">NU_MAD_SM2022_Final_Project_3_2</string>


    <string name="name_placeholder">[Name]</string>
    <string name="breed_placeholder">[Breed]</string>
    <string name="age_placeholder">[X Years]</string>
    <string name="gender_placeholder">[Male/Female]</string>
    <string name="basic_dog_info_placeholder">[Breed], [X Years], [Male/Female]</string>
    <string name="more_info">More Info</string>
    <string name="adopt">Adopt</string>


    <string name="general_info">General Info:</string>
    <string name="status">Status:</string>
    <string name="color">Color:</string>
    <string name="current_size">Current Size:</string>
    <string name="potential_size">Potential Size:</string>
    <string name="fence_required">Fence Required:</string>
    <string name="house_trained">House-trained:</string>
    <string name="obedience_training">Obedience Training:</string>
    <string name="exercise_needs">Exercise Needs:</string>
    <string name="grooming_needs">Grooming Needs:</string>
    <string name="shedding_amount">Shedding Amount:</string>
    <string name="owner_experience">Owner Experience Needed:</string>
    <string name="reaction">Reaction to New People:</string>

    <string name="general_info_placeholder">[General Info]</string>
    <string name="status_placeholder">[Status]</string>
    <string name="color_placeholder">[Color]</string>
    <string name="current_size_placeholder">[Current Size]</string>
    <string name="potential_size_placeholder">[Potential Size]</string>
    <string name="fence_required_placeholder">[Fence Required]</string>
    <string name="house_trained_placeholder">[House-trained]</string>
    <string name="obedience_training_placeholder">[Obedience Training]</string>
    <string name="exercise_needs_placeholder">[Exercise Needs]</string>
    <string name="grooming_needs_placeholder">[Grooming Needs]</string>
    <string name="shedding_amount_placeholder">[Shedding Amount]</string>
    <string name="owner_experience_placeholder">[Owner Experience]</string>
    <string name="reaction_placeholder">[Reaction]</string>

    <string name="create_dog_profile">Create Dog Profile</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="sex">Sex:</string>
    <string name="breed">Breed:</string>
    <string name="personality_training">Personality/Training:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="foster">Foster</string>
    <string name="none">None</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="placeholder_text">Placeholder</string>

    <string name="home_welcome_label">Welcome,</string>
    <string name="home_view_dogs_label">View dogs for adoption</string>
    <string name="home_view_foster_dogs_label">View dogs to Foster</string>
    <string name="home_application_status_label">View application status</string>
    <string name="home_volunteer_label">Volunteer</string>

    <string name="application_header">Application:</string>
    <string name="application_adopt_header">Adoption Application:</string>
    <string name="application_foster_header">Foster Application:</string>
    <string name="application_status_header">Status:</string>
    <string name="application_personal_information_header">Personal Information:</string>
    <string name="application_general_information_header">General Information:</string>
    <string name="application_pending_status">Pending</string>
    <string name="application_first_name">First Name:</string>
    <string name="application_last_name">Last Name:</string>
    <string name="application_age">Age:</string>
    <string name="application_city">City:</string>
    <string name="application_state">State:</string>
    <string name="application_email">Email:</string>
    <string name="application_phone">Phone:</string>
    <string name="application_address">Address</string>
    <string name="application_general_question1">Why are you looking to adopt/foster a pet?</string>
    <string name="application_general_question2">Do you currently have any pets? If so, describe them.</string>
    <string name="application_general_question3">Have you owned any pets in the past 4 years?</string>
    <string name="application_general_question4">How many people live in your household? (Include ages)</string>
    <string name="applicaiton_general_question5">How long will your dog be alone each day?</string>
    <string name="application_edit_button">Edit</string>
    <string name="application_approve_button">Approve</string>
    <string name="application_reject_button">Reject</string>

    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="login_signin_button">Sign In</string>
    <string name="login_create_account_button">Create Account</string>
    <string name="login_forgot_password_button">Forgot Password</string>
    <string name="login_password_placeholder">***********</string>

    <string name="account_create_header">Create Account</string>
    <string name="account_confirm_password_label">Confirm Password</string>
    <string name="account_type_label">Account Type:</string>
    <string name="account_type_adopter">Adopter</string>
    <string name="account_type_foster_parent">Foster Parent</string>
    <string name="account_type_employee">Employee</string>
    <string name="account_signup_button">Sign Up</string>
    <string name="account_information_header">Account Information:</string>
    <string name="user">User</string>
    <string name="applicant">Applicant</string>
    <string name="parent">Parent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_button">Home</string>
    <string name="logout_button">Logout</string>

    <string name="add_dog_profile">Add New Dog Profile</string>
    <string name="update_dog_profile">Update New Dog Profile</string>
    <string name="view_applications">View Applications</string>

    <string name="dog_reaction_friendly">Friendly</string>
    <string name="dog_reaction_cautious">Cautious</string>

    <string name="dog_profiles">Dog Profiles:</string>
    <string name="card_dog_label">Dog Name:</string>
    <string name="card_applicant_label">Applicant Name:</string>
    <string name="card_view_button">View</string>
    <string name="search">Search</string>
    <string name="back_button">Back</string>
    <string name="answer_placeholder">Answer:</string>
    <string name="inprogress_status">In Progress</string>

    <string name="button_add_picture">Add Images</string>
    <string name="continue_str">Continue</string>
    <string name="gallery">Gallery</string>
    <string name="capture">Capture</string>

    <string name="no_images_found">No Images Found for this Dog</string>
    <string name="apply_button">Apply</string>
</resources>