<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loginUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/login_username" />

    <EditText
        android:id="@+id/loginUsernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/placeholder_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginUsernameLabel"
        app:layout_constraintTop_toBottomOf="@+id/loginUsernameLabel" />

    <TextView
        android:id="@+id/loginPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/loginUsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/loginUsernameEditText"
        tools:text="@string/login_password" />

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/login_password_placeholder"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordLabel"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordLabel" />

    <Button
        android:id="@+id/loginSignInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login_signin_button"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText" />

    <Button
        android:id="@+id/loginForgotPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_forgot_password_button"
        app:layout_constraintEnd_toEndOf="@+id/loginSignInButton"
        app:layout_constraintStart_toStartOf="@+id/loginSignInButton"
        app:layout_constraintTop_toBottomOf="@+id/loginSignInButton" />

    <Button
        android:id="@+id/loginCreateAccountButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_create_account_button"
        app:layout_constraintEnd_toEndOf="@+id/loginForgotPasswordButton"
        app:layout_constraintStart_toStartOf="@+id/loginForgotPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/loginForgotPasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>